# CFTLD

./: .gitmodules  CMakeLists.txt  CMakeLists2.txt  README.md  cmake
sample/: sample_image_sequence.cfg  sample_video.cfg
src/cftld/: Clustering.cpp  Clustering.h  DetectionResult.cpp  DetectionResult.h  DetectorCascade.cpp  DetectorCascade.h  EnsembleClassifier.cpp  EnsembleClassifier.h  IntegralImage.h  NNClassifier.cpp  NNClassifier.h  NormalizedPatch.h  TLD.cpp  TLD.h  TLDUtil.cpp  TLDUtil.h  VarianceFilter.cpp  VarianceFilter.h
src/imacq/: ImAcq.cpp  ImAcq.h
src/libopentld/: CMakeLists.txt  CMakeLists2.txt  cmake
src/libopentld/cftld/: TLD.cpp
src/libopentld/tld/: Clustering.cpp  Clustering.h  DetectionResult.cpp  DetectorCascade.cpp  DetectorCascade.h  EnsembleClassifier.cpp  EnsembleClassifier.h  NNClassifier.cpp  NNClassifier.h  TLD.cpp  TLD.h  TLDUtil.cpp  TLDUtil.h
src/opentld/main/: Config.cpp  Config.h  Main.cpp  Main.h  Settings.cpp  Settings.h
